Added Website File

--- a/Basic_HTML_and_CSS/Basic_HTML_5.html
+++ b/Basic_HTML_and_CSS/Basic_HTML_5.html
@@ -4,5 +4,18 @@
 		<link rel = "stylesheet" type = "text/css" href = "Basic_CSS_2.css">
 		<p>Custom Font</p>
 		<h1>&infin;</h1>
+		<em>Emphasized Text</em>
+		<a href="Basic_HTML_4.html" target="new">HTML 4 File</a>
+		<article>
+			<h3>This text is within an article!</h3>
+		</article>
+		<details>
+			<h3>This is a detail!</h3>
+		</details>
+		<details>
+			<summary>Click me!</summary>
+			<h3>Whoa, hidden text!</h3>
+		</details>
+		<h3>At some point in time, it will be <time>10:00</time>!<h3>
 	</body>
 </html>
